Organization service pom settings

--- a/organization/pom.xml
+++ b/organization/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.reservetable.prototype</groupId>
-    <artifactId>organization</artifactId>
+    <artifactId>reservetable-organization</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>reserve-table-organization</name>
+    <name>organization</name>
     <description></description>
 
     <parent>
